--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,18 +57,18 @@ jobs:
     - name: Add GitHub Packages Source
       run: |
         dotnet nuget add source \
-            --name github \
-            --username ${{ github.repository_owner } \
-            --password ${{ secrets.GITHUB_TOKEN }} \
-            --store-password-in-clear-text \
-            https://nuget.pkg.github.com/${{ github.repository_owner }/index.json
+          --name github \
+          --username ${{ github.repository_owner }} \
+          --password ${{ secrets.GITHUB_TOKEN }} \
+          --store-password-in-clear-text \
+          "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
 
     - name: Upload Package
       run: |
         dotnet nuget push \
-            --source github \
-            --api-key ${{ secrets.GITHUB_TOKEN }} \
-            ./Library/bin/Release/JsonExtensions.*.nupkg
+          --source github \
+          --api-key ${{ secrets.GITHUB_TOKEN }} \
+          ./Library/bin/Release/JsonExtensions.*.nupkg
 
   test:
     name: Test
