Add missing things to code analysis

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -13,8 +13,10 @@ on:
 
 jobs:
   analyze:
+    name: Analyze
     runs-on: ubuntu-22.04
     permissions:
+      contents: read
       security-events: write
 
     steps:
