--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,8 @@ jobs:
       with:
         name: JsonExtensions
         path: |
-          ./Library/bin/Release/net6.0/JsonExtensions.dll
-          ./Library/bin/Release/net6.0/JsonExtensions.deps.json
+          ./Library/bin/Release/net6.0/viral32111.JsonExtensions.dll
+          ./Library/bin/Release/net6.0/viral32111.JsonExtensions.deps.json
           ./Library/bin/Release/viral32111.JsonExtensions.*.nupkg
 
     - name: Add GitHub Packages Source
