--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,19 +1,20 @@
 version: 2
 updates:
+
   # Workflows
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: weekly
+      interval: monthly
 
   # Library
   - package-ecosystem: nuget
     directory: /Library/
     schedule:
-      interval: weekly
+      interval: monthly
 
   # Examples
   - package-ecosystem: nuget
     directory: /Examples/
     schedule:
-      interval: weekly
+      interval: monthly
