--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,8 +88,11 @@ jobs:
       - name: Add GitHub Packages source
         run: dotnet nuget add source --name github --username ${{ github.repository_owner }} --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
 
-      - name: Push NuGet package
+      - name: Push to GitHub Packages
         run: dotnet nuget push --source github --skip-duplicate --api-key ${{ secrets.GITHUB_TOKEN }} JsonExtensions/viral32111.JsonExtensions.*.nupkg
+
+      - name: Push to NuGet Gallery
+        run: dotnet nuget push --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} JsonExtensions/viral32111.JsonExtensions.*.nupkg
 
   release:
     name: Release
