Fix bad permissions for release job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
     needs: build-test
     if: ${{ github.ref_type == 'tag' }}
     permissions:
-      packages: write
+      contents: write
     steps:
       - name: Download package artifact
         uses: actions/download-artifact@v3
