Only publish/release on push & tag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
     name: Publish
     runs-on: ubuntu-22.04
     needs: build-test
-    if: ${{ github.ref_type == 'tag' }}
+    if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
     permissions:
       contents: read
       packages: write
@@ -97,7 +97,7 @@ jobs:
     name: Release
     runs-on: ubuntu-22.04
     needs: build-test
-    if: ${{ github.ref_type == 'tag' }}
+    if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
     permissions:
       contents: write
     steps:
