--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
     runs-on: ubuntu-22.04
     permissions:
       contents: read
+      packages: read
     steps:
       - name: Clone repository
         uses: actions/checkout@v3
